# HERMES

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
examples/: cassini_vveje.yaml  earth_mars_hohmann.yaml  voyager2.yaml
hermes/: __init__.py  bodies.py  cli.py  flyby.py  io.py  lambert.py  mission.py  optimizer.py  plot.py  verify.py
tests/: test_flyby.py  test_lambert.py  test_optimizer_hohmann.py
